# NtgHide

./: .replit  main.py  pyproject.toml  replit.md
Modules/deepfake scan/FACTOR/: detect.py
Modules/deepfake scan/MesoNet/: mesonet_detector.py
services/: darkweb_scanner.py  deepfake_detector.py  image_origin_tracer.py
static/css/: style.css
templates/: index.html
